# myfigure

./: CMakeLists.txt
include/figure1/: figure1.h  menu_figure1.h
src/: figure1.cc  figure1_list.cc  main.cc  menu_figure1.cc
tests/: figure1_list_tests.cc  figure1_tests.cc
